<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:theme="@style/Theme.AppCompat.NoActionBar">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            app:contentScrim="#FF9A00"
            app:expandedTitleMarginEnd="@dimen/_72sdp"
            app:expandedTitleMarginStart="@dimen/_16sdp"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imgItem"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/add_recipe_ic"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:riv_corner_radius_bottom_left="@dimen/_20sdp"
                app:riv_corner_radius_bottom_right="@dimen/_20sdp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextColor="@color/white" />

            <ImageButton
                android:id="@+id/imgToolbarBtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/btn_bg2"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:src="@drawable/ic_back" />

            <ImageButton
                android:id="@+id/imgToolbarBtnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/btn_bg2"
                android:padding="@dimen/_9sdp"
                android:src="@drawable/ic_baseline_add_box_24" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appBar"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_recipe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recipe_name"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/control_recipe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/control_recipe_name"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_recipe_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recipe_description"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/control_recipe_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/control_recipe_description"

                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recipe_ingredients"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/control_recipe_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/control_recipe_ingredients"
                    android:paddingLeft="10dp"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recipe_method"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/control_recipe_method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/control_recipe_method"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_no_servings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recipe_number_of_servings"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/control_recipe_no_servings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/control_recipe_number_of_servings"
                    android:inputType="number"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_cooking_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recipe_cooking_time"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/control_recipe_cooking_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/control_recipe_cooking_time"
                    android:inputType="number"
                    android:paddingLeft="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recipe_calories"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/control_recipe_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:hint="@string/control_recipe_calories"
                    android:inputType="number"
                    android:paddingLeft="10dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>